docker files and postgr
